fix: Fixed display error on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,8 +183,16 @@ header h1 {
     column-gap: 0.3rem;
   }
 
-  .button {
-    font-size: 1rem;
+  .pokemon-list button {
+    min-width: auto;
+    width: 160px;
+    min-height: 84px;
+    font-size: 1;
+    font-weight: 700;
+    background-color: #d1ffdf;
+    color: black;
+    border: white;
+    cursor: pointer;
   }
 
   .modal {
@@ -227,7 +235,7 @@ header h1 {
     column-gap: 0.3rem;
   }
 
-  .button {
+  .pokemon-list button {
     font-size: 1.5rem;
   }
 }
